# llvm-pass

./: CMakeLists.txt  README.md
BasicBlockInstrument/: CMakeLists.txt  main.cpp  main.h
FuncInstrument/: CMakeLists.txt  main.cpp  main.h
InstrumentFramework/: AbsInstrPass.cpp  AbsInstrPass.h  CMakeLists.txt  CallTraceInstrPass.cpp  CallTraceInstrPass.h  runit.sh
Metadata/: Counter.cpp  Counter.h
instrumentation/: CMakeLists.txt  Makefile  main.cpp  main.h
